--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest-sorted": "^1.0.14",
     "pg": "^8.11.3",
     "supertest": "^6.3.3"
   },
