--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "express": "^4.18.2",
     "jest-sorted": "^1.0.14",
     "pg": "^8.11.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "jest-extended": "^2.0.0",
+    "husky": "^8.0.2",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
