--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "husky": "^8.0.2",
+    "jest-extended": "^2.0.0",
     "jest-sorted": "^1.0.14",
     "pg": "^8.11.3",
-    "supertest": "^6.3.3",
-    "jest-extended": "^2.0.0",
-    "husky": "^8.0.2",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
       "jest-extended/all"
     ]
   }
-  }
+}
